umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_Issue241.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 34
sum_formula: C23N6O2
graph6: ^hCGG_BOO?_@?@??_@??B??C??G??G??C??C???G??A_??@???@????_???G???A????C????G????O
