umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_Issue3549146.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 16
bond_count: 17
sum_formula: C13H3
graph6: OhCIK?@?G?_C?@_?_?OC?
