umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_Sgroups_SRU_02.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 10
bond_count: 10
sum_formula: C8
graph6: IY_X?C@?_
